[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tools"
version = "0.1.0"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "plotly",
    "scipy"
]

[tool.setuptools.packages.find]
where = ["."] # Il va trouver automatiquement 'data' et 'io'